fix: z-index on copy-buttons

--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -109,7 +109,7 @@
     font-size: 2rem;
     position: absolute;
     right: 1.5rem;
-    z-index: 100;
+    z-index: 90;
     padding: 0rem 0.25rem;
     color: rgb(var(--color-highlight), 0.4);
 
@@ -126,7 +126,7 @@
     top: 0.1rem;
     font-size: 2rem;
     right: 1.5rem;
-    z-index: 100;
+    z-index: 90;
     padding: 0rem 0.25rem;
     color: rgb(var(--color-background), 0.4);
 
